--- a/package.json
+++ b/package.json
@@ -12,13 +12,26 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    "> 1%",
+    "not dead"
+  ],
   "bugs": {
     "url": "https://github.com/WestKostikov/Food-shop/issues"
   },
   "homepage": "https://github.com/WestKostikov/Food-shop#readme",
   "devDependencies": {
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "babel-loader": "^8.2.2",
+    "core-js": "^3.16.2",
     "json-server": "^0.16.3",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {
+    "es6-promise": "^4.2.8",
+    "nodelist-foreach-polyfill": "^1.2.0"
   }
 }
